# tp-3-juliaarkadiusz

./: .gitmodules  CMakeLists.txt  pyproject.toml  test.py
Raport_Projekt3_JuliaArkadiusz/: Raport_Projekt3_JuliaArkadiusz.ipynb
TP_Proj3_Syngaly/: CMakeLists.txt  pyproject.toml  test.py
TP_Proj3_Syngaly/src/: main.cpp
TP_Proj3_Syngaly/src/scikit_build_example/: __init__.py
src/: main.cpp
